--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body>
-
-
+  <body class="background">
+    <div>
+  
     <!------- BUTTONS-for-DESKTOP-TABLET-and-MOBILE -------->
 
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et natus dolores asperiores excepturi omnis, earum impedit non ducimus ipsa. Mollitia exercitationem
@@ -60,7 +60,7 @@
 
 <button type="submit" class="btn-mob button-mobile-quadro">ОФОРМИТИ БРОНЮВАННЯ
 </button>
-
+ </div>
 <a href="#">Повернутися до перегляду номерів<span>
     <svg class="arrow-right" width="23" height="13">
         <use href="/sprite.svg#arrow-right"></use>
